<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/e"
    tools:context="com.se.findmyphone.CommandActivity">
    <TextView
        android:id="@+id/exp_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comm"/>
    <TextView
        android:id="@+id/comm_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exp_tv"
        android:layout_marginTop="50dp"
        android:text="@string/ent_comm"/>
    <EditText
        android:id="@+id/comm_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comm_tv"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@id/comm_edt"
        android:text="@string/set_comm"
        android:textColor="#000000"
        android:id="@+id/btn_set"
        />
</RelativeLayout>
