<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/rl"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.se.findmyphone.HomeActivity">

    <TextView
        android:id="@+id/add_tv"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="addCommand"
        android:text="@string/add_comm"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:id="@+id/black_tv"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_below="@id/add_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="bwList"
        android:text="@string/bw_list"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:id="@+id/emergency_tv"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_below="@id/black_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="emergCont"
        android:text="@string/emergency_cont"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:id="@+id/pwd_tv"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_below="@id/emergency_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="setPwd"
        android:text="@string/set_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
</RelativeLayout>
